--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">RetroFlow MVP</string>
+    
+    
+    <string name="board">Board</string>
+    <string name="settings">Settings</string>
+    <string name="profile">Profile</string>
 </resources>
