app logo, splash screen added, MVP suffix removed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RetroFlow MVP</string>
+    <string name="app_name">RetroFlow</string>
     
     
     <string name="board">Board</string>
