--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">RetroFlow</string>
-    
-    
     <string name="board">Board</string>
     <string name="settings">Settings</string>
     <string name="profile">Profile</string>
+
+    <string name="type_comment"><font size="14">Type a comment</font></string>
+    <string name="author">Author:</string>
+    <string name="assignee">Assignee:</string>
+    <string name="votes">Votes:</string>
 </resources>
